chore: Update demo profile and instructions